--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ body{
 }
 
 .bgc{
-padding: 0.4rem;
-background-color: #3fabc9;
+	padding: 0.4rem;
+	background-color: #3fabc9;
 }
 
 .bgc__secondaire{
-padding: 1rem;
-background-color: #CDCD37;
+	padding: 1rem;
+	background-color: #CDCD37;
 } 
 
 a, a:hover, a:visited, a:link{	
@@ -26,19 +26,19 @@ a, a:hover, a:visited, a:link{
 	text-transform: capitalize;
 }
 a > i{
-margin: 0 2rem;
+	margin: 0 2rem;
 }
 
 
 i{
-font-size:2rem;
-margin-right:5%;
-margin-left:5%;
+	font-size:2rem;
+	margin-right:5%;
+	margin-left:5%;
 }
 
 .acceuil{
-margin:0.4rem;
-vertical-align: middle; 
+	margin:0.4rem;
+	vertical-align: middle; 
 }
 
 /*ecriture*/
@@ -48,14 +48,14 @@ p{
 }
 
 .majuscule{
-text-transform: uppercase;
-font-weight:bold;
+	text-transform: uppercase;
+	font-weight:bold;
 }
 
 .element{
-font-weight:bold;
-font-size:1.1rem;
-font-family: 'Poppins', sans-serif;
+	font-weight:bold;
+	font-size:1.1rem;
+	font-family: 'Poppins', sans-serif;
 }
 
 
@@ -63,21 +63,21 @@ font-family: 'Poppins', sans-serif;
 /*flexbox*/
 
 .flexbox{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
-padding: 1rem;
--webkit-box-align: center;
- -ms-flex-align: center;
-align-items: center;
-justify-content: center;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	padding: 1rem;
+	-webkit-box-align: center;
+	 -ms-flex-align: center;
+	align-items: center;
+	justify-content: center;
 }
 
 /*image*/
 
 .logo{
-width:3.125rem;
-height:3.125rem;
+	width:3.125rem;
+	height:3.125rem;
 }
 
 header {
@@ -99,7 +99,7 @@ header {
 
 
 ul {
-display: -webkit-box;
+	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
 	width:100%;
@@ -123,20 +123,20 @@ h1{
 }
 
 h2{
-margin:0;
-text-transform: uppercase;
-font-size:1.4rem;
-font-family: 'Poppins', sans-serif;
+	margin:0;
+	text-transform: uppercase;
+	font-size:1.4rem;
+	font-family: 'Poppins', sans-serif;
 }
 
 .principal{
-text-transform: capitalize;
-font-size:4rem;
-font-family: 'Cookie', cursive;
+	text-transform: capitalize;
+	font-size:4rem;
+	font-family: 'Cookie', cursive;
 }
 
 nav > a {
-display:block;
+	display:block;
 }
 
 main {
@@ -150,40 +150,40 @@ main {
 
 
 .conteneur__erreur{
-width:100%;
-margin:auto;
-margin-top:2%;
-border-style: solid solid none solid;
-border-width: 2px;
-border-color:#CDCD37;
+	width:100%;
+	margin:auto;
+	margin-top:2%;
+	border-style: solid solid none solid;
+	border-width: 2px;
+	border-color:#CDCD37;
 }
 
 .conteneur__erreur > p{
-padding-right: 8%;
-padding-left: 8%;
+	padding-right: 8%;
+	padding-left: 8%;
 }
 
 
 #erreur-message > i {
-color: #CDCD37;
-font-size:11rem;
-margin-right: 1%;
-margin-left: 1%;
+	color: #CDCD37;
+	font-size:11rem;
+	margin-right: 1%;
+	margin-left: 1%;
 
 }
 
 /*article*/
 
 #prixduproduit{
-font-size:2rem;
-margin:0;
+	font-size:2rem;
+	margin:0;
 }
 
 .conteneur-image{
-width:100%;
-height:100%;
-margin:0;
-overflow:hidden;
+	width:100%;
+	height:100%;
+	margin:0;
+	overflow:hidden;
 }
 
 .article-image{
@@ -233,7 +233,7 @@ overflow:hidden;
 }
 
 .ficheproduit-contenu__index > a{
-margin:1rem 0 0 0;
+	margin:1rem 0 0 0;
 }
 
 .ficheproduit-contenant__gauche {
@@ -260,165 +260,125 @@ margin:1rem 0 0 0;
 
 /*panier*/
 
-.panier-tableau{
-width:95%;
-min-height:110px;
-margin:auto;
-text-transform: uppercase;
+article {
+	border: 2px solid #3fabc9;
 }
 
-.panier-tableau, .panier-tableau__prix p, .panier-tableau__quantite, .panier-tableau__soustotal p{
-font-size:2rem;
-}
-
-.panier-tableau img{
-width:100%;
-margin:auto;
-}
-
-
-.panier-tableau__ligne{
-height:100px;
-}
-
-.panier-tableau__image{
-width:35%;
-}
-
-.panier-tableau__descriptionduproduit{
-width:35%;
-padding:8px;
-text-align:justify;
-font-family: 'Poppins', sans-serif;
-}
-
-small{
-font-size:1rem;
-}
-
-.panier-tableau__prix{
-width:10%;
-}
-
-.panier-tableau__quantite{
-width:10%;
-}
-
-.produitsvaleur{
-width:5%;
-}
-
-.panier-tableau__soustotal{
-width:10%;
-}
 
 /*formulaire*/
 
 #adresseclient{
-margin:8px;
+	margin:8px;
 }
 
 .souspartie{
-padding:8px;
+	padding:8px;
 }
 
 input, textarea {
-outline: none;
-border-radius: 4px;
-height: 25px;
-border: 1px solid #ddd;
-margin-top: 5px;
+	outline: none;
+	border-radius: 4px;
+	height: 25px;
+	border: 1px solid #ddd;
+	margin-top: 5px;
 }
 
 .erreur__formulaire input, .form-group.erreur__formulaire textarea {
-border: 2px solid #CDCD37;
+	border: 2px solid #CDCD37;
 }
 
-.form-group.erreur__formulaire label {
-color: #CDCD37;
+.form-group.erreur__formulaire label {	
+	color: #CDCD37;
 }
 
 .erreur__formulaire::after {
-content: 'Ce champs est invalide';
-display: block;
-color: #CDCD37;
-padding: 5px 0;
-font-size: .9rem;
+	content: 'Ce champs est invalide';
+	display: block;
+	color: #CDCD37;
+	padding: 5px 0;
+	font-size: .9rem;
 }
 
 button{
-margin: 1rem auto;
-padding: 0.4rem;
-background-color: #3fabc9;
-border-radius: 0.8em;
-border: none;
-cursor: pointer;
-line-height: 1rem;
-text-transform: uppercase;
-font-weight:bold;
+	margin: 1rem auto;
+	padding: 0.4rem;
+	background-color: #3fabc9;
+	border-radius: 0.8em;
+	border: none;
+	cursor: pointer;
+	line-height: 1rem;
+	text-transform: uppercase;
+	font-weight:bold;
 
 }
 
 button:focus{
-border: 2px solid #000;
+	border: 2px solid #000;
 }
 
 /*confirmationdecommande*/
 
 .heigtauto{
-height:auto;
+	height:auto;
 }
 
 .conteneur__demie{
-width:	50%;
-margin:auto;
+	width:	50%;
+	margin:auto;
 }
 .conteneur__bleu{
-padding:0;
-border-style: none solid solid solid;
-border-width: 2px;
-border-color:#3fabc9;
-vertical-align
+	padding:0;
+	border-style: none solid solid solid;
+	border-width: 2px;
+	border-color:#3fabc9;
+	vertical-align
 }
 
 .conteneur__bleu > p{
-padding-top: 1%;
-margin:0;
+	padding-top: 1%;
+	margin:0;
+}
+
+.user, .order-id{
+	color: #CDCD37;
+	text-transform: capitalize;
+	font-weight:bold;
 }
 
 /* footer */
 footer {
-width:100%;
-position: fixed;
-bottom: 0;
+	width:100%;
+	position: fixed;
+	bottom: 0;
 }
 
 
 /*bouton*/
 
 .btn {
-margin: 1rem 2rem 1rem 1rem;
-border-radius: 0.8em;
-border: none;
-cursor: pointer;
-line-height: 1rem;
+	margin: 1rem 2rem 1rem 1rem;
+	border-radius: 0.8em;
+	border: none;
+	cursor: pointer;
+	line-height: 1rem;
 }
 
 .btn__achat {
-width : 230px;
+	width : 230px;
+	margin-top:0.5rem;
 }
 
 .btn__achat > i {
-vertical-align: middle;
+	vertical-align: middle;
 }
 
 /*focus*/
 
 .focus:focus{
-border: 2px solid #000;
+	border: 2px solid #000;
 }
 
 a > i:focus{
-border-bottom:2px solid #000;
+	border-bottom:2px solid #000;
 }
 
