--- a/css/style.css
+++ b/css/style.css
@@ -263,13 +263,14 @@ main {
 .produit-img > img{
 	display: block;
 	width:320px;
+	border: 2px solid #3fabc9;
 }
 
 .produit-information, .sous-total{
 	background-color: #3fabc9;
 }
 
-.produit-img, .quantity{
+.quantity{
 	border: 2px solid #3fabc9;
 }
 
