--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ main {
 
 article{
 	width:80%;
-	background-color: #3fabc9;
+	margin:0;
 }
 
 .produit-img{
@@ -272,6 +272,7 @@ article{
 .produit-img > img{
 	display: block;
 	width:320px;
+	margin:0;
 	border: 2px solid #3fabc9;
 }
 
