--- a/css/style.css
+++ b/css/style.css
@@ -355,8 +355,9 @@ button:focus{
 }
 
 .conteneur__bleu > p{
-	padding-top: 1%;
 	margin:0;
+	padding-top: 1%;
+	text-align:center;
 }
 
 .user, .order-id{
