--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ p{
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	margin:0;
 	padding: 1rem;
 	-webkit-box-align: center;
 	 -ms-flex-align: center;
