--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ button:focus{
 	text-align:center;
 }
 
-.user, .order-id{
+.panier-total__prix, .user, .order-id{
 	color: #CDCD37;
 	text-transform: capitalize;
 	font-weight:bold;
