--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ h1{
 	margin:0 auto;
 	font-family: 'Cookie', cursive;
 	font-size:5rem;
-	text-transform: lowercase;
+	text-transform: none;
 	text-align:left;
 }
 
