--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ main {
 	display: flex;
 	width:100%;
 	height:100%;
-	margin:0 auto;
+	margin:auto;
 	flex-direction:row;
 	flex-wrap: wrap;
 	flex-wrap: -webkit-wrap;
