--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ main {
 	width:100%;
 	height:100%;
 	margin:auto;
+	margin-bottom:1rem;
 	flex-direction:row;
 	flex-wrap: wrap;
 	flex-wrap: -webkit-wrap;
