--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,44 @@ header {
 	margin:0;
 }
 
+li > a {
+	display: block;
+    width:auto;
+}
+
+ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	width:100%;
+	list-style:none;
+	margin-left:0;
+	padding-left:0;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: baseline;
+	-ms-flex-align: baseline;
+	align-items: baseline; 
+}
+
+.logo__header{
+	-webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 3 3 auto;
+    -ms-flex: 3 3 auto;
+    flex: 3 3 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    }
+
+.logo{
+	width:3.125rem;
+	height:3.125rem;
+}
+
 /*corps de texte*/
 
 main {
