--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ input, textarea {
 }
 
 @media screen and (max-width:1199px) {
-	.ficheduproduit conteneur__demie{
+	.conteneur__demie{
 		width: 70%;
 	}
 }
