--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,12 @@ input, textarea {
 	}
 }
 
+@media screen and (max-width:799px) {
+	.conteneur__demie{
+		width: 80%;
+	}
+}
+
 @media screen and (max-width: 499px) {
 	.listedesproduits{
 		display:block;
