--- a/css/style.css
+++ b/css/style.css
@@ -394,12 +394,21 @@ input, textarea {
 	.ficheduproduit > div {
 		display:block;
 	}
+	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
+		width:100%;	
+	}
 	.conteneur__demie{
 		width: 100%;
 	}
 }
 
 @media screen and (max-width: 499px) {
+	.ficheduproduit > div {
+		display:block;
+	}
+	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
+		width:100%;	
+	}
 	.conteneur__demie{
 		width: 100%;
 	}
@@ -418,6 +427,12 @@ input, textarea {
 }
 
 @media screen and (max-width: 455px) {
+	.ficheduproduit > div {
+		display:block;
+	}
+	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
+		width:100%;	
+	}
 	.conteneur__demie{
 		width: 100%;
 	}
