--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,12 @@ input, textarea {
 	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
 		width:100%;	
 	}
+	.ficheproduit-contenant__gauche, {
+	padding-left: 0
+	}
+	.ficheproduit-contenu {
+		width: auto;
+	}
 	.conteneur__demie{
 		width: 100%;
 	}
@@ -408,6 +414,12 @@ input, textarea {
 	}
 	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
 		width:100%;	
+	}
+	.ficheproduit-contenant__gauche, {
+	padding-left: 0
+	}
+	.ficheproduit-contenu {
+		width: auto;
 	}
 	.conteneur__demie{
 		width: 100%;
@@ -432,6 +444,12 @@ input, textarea {
 	}
 	.ficheproduit-contenant__gauche, .ficheproduit-contenant__droit{
 		width:100%;	
+	}
+	.ficheproduit-contenant__gauche, {
+	padding-left: 0
+	}
+	.ficheproduit-contenu {
+		width: auto;
 	}
 	.conteneur__demie{
 		width: 100%;
