--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ input, textarea {
 		width:100%;	
 	}
 	.ficheproduit-contenant__gauche, {
-	padding-left: 0
+	padding-left: 0;
 	}
 	.ficheproduit-contenu {
 		width: auto;
@@ -419,7 +419,7 @@ input, textarea {
 		width:100%;	
 	}
 	.ficheproduit-contenant__gauche, {
-	padding-left: 0
+	padding-left: 0;
 	}
 	.ficheproduit-contenu {
 		width: auto;
@@ -449,7 +449,7 @@ input, textarea {
 		width:100%;	
 	}
 	.ficheproduit-contenant__gauche, {
-	padding-left: 0
+	padding-left: 0;
 	}
 	.ficheproduit-contenu {
 		width: auto;
