--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,7 @@ article{
 input, textarea {
 	outline: none;
 	border-radius: 4px;
+	width: 100%;
 	height: 25px;
 	border: 1px solid #ddd;
 	margin-top: 5px;
